--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title | default: "Mahammad Sheykhov" }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/ADA_CSS.css">
+    <link rel="stylesheet" href="{{ '/ADA_CSS.css' | relative_url }}">
 </head>
 <body>
     {{ content }}
-    <script src="{{ site.baseurl }}/ADA_ProjJS.js" defer></script>
+    <script src="{{ '/ADA_ProjJS.js' | relative_url }}" defer></script>
 </body>
 </html>
 
